--- a/index.html
+++ b/index.html
@@ -25,11 +25,22 @@
                 <div class="group">
                     <label for="tank">Tank:</label>
                     <select id="tank">
-                        <option value="43">Low Boy</option>
+                        <option value="null">-- Select Option --</option>
+                        <option value="64">Rect. 1000 Gallon</option>
+                        <option value="54">Rect. LowBoy (single & combo)</option>
+                        <option value="61">Rect. 1250 Gallon</option>
+                        <option value="68">Rect. 1250 Gallon (single & combo)</option>
+                        <option value="68">Rect. 1500 Gallon (single & combo)</option>
+                        <option value="51">Plastic</option>
+                        <option value="57">Round 500 Gallon (solid)</option>
+                        <option value="66">Round 1000 Gallon (solid)</option>
+                        <option value="55">Round 1000 Gallon (2 piece mid-seam lowboy)</option>
+                        <option value="65">Round 1250 Gallon (2 piece mid-seam)</option>
+                        <option value="75">Round 1500 Gallon (2 piece mid-seam)</option>
                     </select>
                 </div>
 
-                <button type="button" onclick="addValues()">Calculate ptg+pitch</button>
+                <button type="button" onclick="addValues()">Calculate</button>
 
             </div>
 
