--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link type="text/css" rel="stylesheet" href="style.css">
-        <title>Drugs</title>
+        <title>Branvall Calculator</title>
     </head>
     <body>
 
